Version 1.1.10

2010-05-16
 Added more of zlib and tcl::prefix in syntaxbuild.
 Added more of chan in syntaxbuild.

2010-05-16
 Corrected output in db browser. Fixed GUI test for db browser.

2010-05-16
 More OO in syntaxbuild.
 Handle when a token "s" is not first.

2010-05-12
 Search down all namespaces for a command.
 Include all preceeding arguments in a virtual namespace.

2010-05-11
 Restored token cn behaviour to virtual namespace.
 Include more oo in 8.6 database.

2010-05-10
 Added info about more 8.6 commands to syntax db.

2010-05-10
 Added syntax token cv for variable list+code combination.
 Added a check for malformed argument list to a proc.

2010-05-10
 Cleaned up code syntax tokens. Renamed C to cg for global context.
 Made cn work reasonably. Added tests for cg, cn and cl.

2010-05-09
 Added inline syntax of "copy", to copy syntax from command to command

2010-05-09
 Added inline syntax of "subcmd+", to handle adding subcmds.

2010-05-09
 Handle -- better in some cases.
 Include msgcat, namespace which, and 8.6 catch in syntaxbuild.
 Experiment to test TDBC

2009-12-21
 Note when a newline breaks a command substitution

2009-11-22
 Added support for partial command tokens

2009-11-22
 Added html output option.

2009-10-03
 Added a check for expr calls in expressions.

2009-05-20
 Handle namespace variables better. [Bug 15644]

2009-05-20
 Fixed a bug where a command added though inline commend was not
 fully recognised internally. [Bug 15645]

2009-05-20
 Added info about some 8.6 commands to syntax db.

2009-02-17
 Misc improvments from Hans Goetz, including:
   bug removed in the result window context menu, add filter
   added new menu item "Save Result" in the result window context menu
   added option "Disable variable checking" in the options menu
   added option for editor "PFE" which is a popular freeware editor under WIN

2008-09-23
 Support initialising incr for 8.5
 Generate db for 8.6.
 Make a cmd line exe for Windows when wrapping.
