@@ -1,3 +1,6 @@
+2010-05-18
+ Handle tailcall.
+
 Version 1.1.10
 
 2010-05-16
